# interval

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/include/interval/: interval.h
tests/: CMakeLists.txt
tests/src/: interval_tests.cpp
